config/kubernetes/500-webhook.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: manual-approval-gate-webhook
  namespace: tekton-pipelines
  labels:
    version: "devel"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: manual-approval
  template:
    metadata:
      labels:
        name: manual-approval
        app: manual-approval
    spec:
      serviceAccountName: manual-approval-gate-webhook
      containers:
        - name: manual-approval
          image: "ko://github.com/openshift-pipelines/manual-approval-gate/cmd/webhook"
          ports:
            - name: https-webhook
              containerPort: 8443
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            runAsUser: 65532
            capabilities:
              drop:
                - ALL
---

apiVersion: v1
kind: Service
metadata:
  name: manual-approval-webhook
  namespace: tekton-pipelines
  labels:
    version: "devel"
spec:
  ports:
    - name: https-webhook
      port: 443
      targetPort: 8443
  selector:
    name: manual-approval
