config/kubernetes/400-webhook.yaml
# apiVersion: admissionregistration.k8s.io/v1
# kind: ValidatingWebhookConfiguration
# metadata:
#   name: validation.webhook.manual.approval.dev
#   labels:
#     app.kubernetes.io/component: webhook
#     app.kubernetes.io/instance: default
#     app.kubernetes.io/part-of: tekton-pipelines
# webhooks:
#   - admissionReviewVersions: ["v1"]
#     clientConfig:
#       service:
#         name: manual-approval-webhook
#         namespace: tekton-pipelines
#     failurePolicy: Fail
#     sideEffects: None
#     name: validation.webhook.manual.approval.dev

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook.manual.approval.dev
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: tekton-pipelines
webhooks:
  - admissionReviewVersions: ["v1"]
    rules:
      - operations: [ "UPDATE"]
        apiGroups: [ "openshift-pipelines.org" ]
        apiVersions: [ "v1alpha1" ]
        resources: [ "approvaltask", "approvaltasks" ]
        scope: "Namespaced"
    clientConfig:
      service:
        name: manual-approval-webhook
        namespace: tekton-pipelines
    failurePolicy: Fail
    sideEffects: None
    name: webhook.manual.approval.dev

---
# apiVersion: admissionregistration.k8s.io/v1
# kind: ValidatingWebhookConfiguration
# metadata:
#   name: config.webhook.manual.approval.dev
#   labels:
#     app.kubernetes.io/component: webhook
#     app.kubernetes.io/instance: default
#     app.kubernetes.io/part-of: tekton-pipelines
# webhooks:
#   - admissionReviewVersions: ["v1"]
#     clientConfig:
#       service:
#         name: manual-approval-webhook
#         namespace: tekton-pipelines
#     failurePolicy: Fail
#     sideEffects: None
#     name: config.webhook.manual.approval.dev
#     objectSelector:
#       matchLabels:
#         app.kubernetes.io/part-of: tekton-pipelines
